--- a/package.json
+++ b/package.json
@@ -11,13 +11,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,Quiz}/**/*.ts\" --fix",
-    "Quiz": "jest",
-    "Quiz:watch": "jest --watch",
-    "Quiz:cov": "jest --coverage",
-    "Quiz:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "Quiz:e2e": "jest --config ./Quiz/jest-e2e.json"
+    "start:prod": "node dist/main.js",
+    "lint": "eslint \"{src,apps,libs,Quiz}/**/*.ts\" --fix"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -43,7 +38,6 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
-    "@nestjs/Quizing": "^11.0.1",
     "@nestjs/schematics": "^11.0.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
@@ -52,7 +46,6 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/sequelize": "^4.28.20",
-    "@types/superQuiz": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -60,7 +53,6 @@
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
-    "superQuiz": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
